--- a/eda/bindingDB_eda.ipynb
+++ b/eda/bindingDB_eda.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "source": [
     "# Exploratory Data Analysis on the BindingDB dataset from JGLaser's HuggingFace Datasets repository.\n",
-    "By Carlo Grigioni, Christian Pala and Andrea Wey"
+    "By Christian Pala, Carlo Grigioni and Andrea Wey"
    ],
    "metadata": {
     "collapsed": false
